# lab2_cpp

./: CMakeLists.txt  main.cpp
